# capaa-inference-sv

./: .gitignore  CMakeLists.txt  PLAN.md  inference_request.h  layers.cpp  main.cpp  ops.cpp  ops.h  serverHTTP.cpp  serverHTTP.sln  server_queue.cpp  server_queue.h  tensor.h
include/: arenaAllocator.h  arenaAllocator.hpp  bi_gram_model.h  bi_gram_model.hpp  inference_request.h  layers.h  layers.hpp  ops.hpp  serverHTTP.hpp  server_queue.h  server_queue.hpp  tensor.h  tensor.hpp
models/: tokenizer.json
src/: bi_gram_model.cpp  layers.cpp  main.cpp  ops.cpp  serverHTTP.cpp  server_queue.cpp
test/: arena_test.cpp  ops_test.cpp
